--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.4.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -40,6 +39,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^5.0.0-beta.3",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
