--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^16.3.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.1",
+    "react-markdown": "^3.3.0",
     "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-beta.3",
     "resolve": "1.6.0",
