--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "codemirror-github-light": "^0.4.2",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -35,6 +36,7 @@
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "primer-markdown": "^3.7.5",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.3.1",
