--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "raf": "3.4.0",
     "react": "^16.3.1",
     "react-dev-utils": "^5.0.1",
+    "react-disqus-comments": "^1.2.0",
     "react-dom": "^16.3.1",
     "react-markdown": "^3.3.0",
     "react-router-dom": "^4.2.2",
